<resources>
    <string name="app_name">Reminder App</string>
    <string name="teit_error_text">This field is mandatory</string>
    <string name="del_reminder_dialog_negative_button">Cancel</string>
    <string name="ra_empty_state_title">No Reminders</string>
    <string name="ra_empty_state_text">Add a reminder and it will appear here</string>

    <string name="ra_copy_confirmation_text">Reminder title copied</string>
    <string name="delete_reminder_dialog_title">Delete Reminder</string>
    <string name="delete_reminder_dialog_message">This action cannot be undone</string>
    <string name="copy">Copy</string>
    <string name="edit">Edit</string>

    <string name="delete">Delete</string>
    <string name="new_reminder">new Reminder</string>
    <string name="reminder_set_c">Reminder Set</string>

    <string name="notification_ctitle">Reminder</string>
    <string name="title">Title</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="update_app_informative_text">A new version is available</string>

    <string name="update_app_button_text">UPDATE</string>
    <string name="new_reminder1">New Reminder</string>
    <string name="save">SAVE</string>
    <string name="date">Date</string>
    <string name="time">Time</string>

    <string name="help">Help</string>
    <string name="share_app">Share App</string>
    <string name="edt_rmdr">Edit Reminder</string>
    <string name="st_rmd_dte">Set Reminder Date</string>
    <string name="st_rmdr_tme">Set Reminder Time</string>

    <string name="rmdr_updtd">Reminder Updated</string>
    <string name="pmtn_msg_txt">Reminder App is a fast and simple app that I use to schedule tasks. Get it from: https://play.google.com/store/apps/details?id=</string>
    <string name="sr_va">Share via</string>


    <string name="channel_name" translatable="false">Reminder Notification</string>
    <string name="channel_description" translatable="false">Reminders</string>
    <string name="r_r_title" translatable="false">rRTitle</string>

    <string name="flexibility_o_title">Flexibly set reminders</string>
    <string name="flexibility_o_text">Create task items from the palm of your hand</string>
    <string name="speed_o_title">Quickly schedule tasks</string>
    <string name="speed_o_text">Fast features are provided</string>
    <string name="get_started">GET STARTED</string>


    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

</resources>
