<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@android:color/white"
android:fitsSystemWindows="true"
android:orientation="vertical"
android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
    >

<com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:gravity="center"
    android:background="@color/colorPrimary"
    app:elevation="0dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/action_bar_close_button"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:tint="@android:color/white"
            app:srcCompat="@drawable/ic_action_close" />

        <TextView
            android:id="@+id/action_bar_title_tvw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/new_reminder1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/action_bar_save_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:textSize="16sp"
            android:text="@string/save"
            android:textColor="@android:color/white" />

    </LinearLayout>

</com.google.android.material.appbar.AppBarLayout>

<androidx.core.widget.NestedScrollView
    android:id="@+id/nested_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:scrollingCache="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:id="@+id/nr_title_til"
            android:hint="@string/title"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            >



            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nr_title_tiet"
                android:inputType="text"
                android:textColor="@color/highEmphasisTextColor"
                android:textSize="16sp"
                />



        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:gravity="center"
            android:id="@+id/new_reminder_date_layout"
            android:background="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:weightSum="100"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:paddingRight="16dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:layout_weight="95"
                android:gravity="center"
                android:weightSum="100"
                >


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/nrdl_date_label_tvw"
                    android:textColor="@color/highEmphasisTextColor"
                    android:textSize="16sp"
                    android:gravity="left"
                    android:layout_weight="65"
                    android:text="@string/date"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/nrdl_date_value_tvw"
                    android:gravity="right"
                    android:layout_weight="35"
                    android:textColor="@color/mediumEmphasisTextColor"
                    android:textSize="16sp"/>


            </LinearLayout>


            <ImageView
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:id="@+id/nrdl_icon"
                android:src="@drawable/ic_action_open"
                />


        </LinearLayout>

        <view
            class="android.view.View"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:gravity="center"
            android:id="@+id/new_reminder_time_layout"
            android:background="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:weightSum="100"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:paddingRight="16dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:layout_weight="95"
                android:gravity="center"
                android:weightSum="100"
                >


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/nrtl_time_label_tvw"
                    android:textColor="@color/highEmphasisTextColor"
                    android:textSize="16sp"
                    android:gravity="left"
                    android:layout_weight="65"
                    android:text="@string/time"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/nrtl_time_value_tvw"
                    android:gravity="right"
                    android:layout_weight="35"
                    android:textColor="@color/mediumEmphasisTextColor"
                    android:textSize="16sp"/>


            </LinearLayout>


            <ImageView
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:id="@+id/nrtl_icon"
                android:src="@drawable/ic_action_open"
                />


        </LinearLayout>

        <view
            class="android.view.View"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>

</LinearLayout>
